fix: friendship dto returns friends id